gofundir = $(datadir)/gofun/
gofun_DATA = gofun.png config.png home.png backward.png forward.png print.png \
	help.png gofun-16x16.png default_link.png default_application.png \
	default_device.png default_directory.png green_check.png green_check_12.png \
	red_cross_12.png yellow_plus_12.png yellow_minus_12.png yellow_arrow_down_12.png \
	yellow_arrow_up_12.png stone_cutting_12.png way_and_landscape_12.png red_key_record_16.png \
	blue_key_stop_16.png
SUBDIRS = tools
METASOURCES = AUTO
